@@ -1,18 +1,18 @@
 package uq.pac.rsvp.policy.ast.schema.attribute;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
+import uq.pac.rsvp.policy.ast.visitor.SchemaComputationVisitor;
 import uq.pac.rsvp.policy.ast.visitor.SchemaVisitor;
 
 public class RecordType extends AttributeType {
-    private Map<String, AttributeType> attributes;
+    private final Map<String, AttributeType> attributes;
 
     public RecordType(Map<String, AttributeType> attributes, boolean required, Map<String, String> annotations) {
         super(required, annotations);
-        this.attributes = attributes != null ? new HashMap<>(attributes) : Collections.emptyMap();
+        this.attributes = attributes != null ? Map.copyOf(attributes) : Collections.emptyMap();
     }
 
     public RecordType(Map<String, AttributeType> attributes, Map<String, String> annotations) {
@@ -21,7 +21,7 @@ public class RecordType extends AttributeType {
 
     public RecordType(Map<String, AttributeType> attributes, boolean required) {
         super(required);
-        this.attributes = attributes != null ? new HashMap<>(attributes) : Collections.emptyMap();
+        this.attributes = attributes != null ? Map.copyOf(attributes) : Collections.emptyMap();
     }
 
     public RecordType(Map<String, AttributeType> attributes) {
@@ -36,7 +36,13 @@ public class RecordType extends AttributeType {
         return attributes != null ? attributes.get(name) : null;
     }
 
+    @Override
     public void accept(SchemaVisitor visitor) {
         visitor.visitRecordAttributeType(this);
+    }
+
+    @Override
+    public <T> T compute(SchemaComputationVisitor<T> visitor) {
+        return visitor.visitRecordAttributeType(this);
     }
 }
